--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server ./"
   },
   "author": "Krish",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "http-server": "^0.9.0"
   }
